added one sql query

--- a/Airbnb_Seattle.ipynb
+++ b/Airbnb_Seattle.ipynb
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 407,
-   "id": "80bfb2ba",
+   "id": "7a08211f",
    "metadata": {},
    "outputs": [
     {
@@ -2119,8 +2119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
-   "id": "1455b6cb",
+   "execution_count": 641,
+   "id": "592ea1d7",
    "metadata": {},
    "outputs": [
     {
@@ -2144,58 +2144,58 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Neighbourhood</th>\n",
+       "      <th>neighbourhood_cleansed</th>\n",
        "      <th>Count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>0</th>\n",
        "      <td>Broadway</td>\n",
        "      <td>397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
        "      <td>Belltown</td>\n",
        "      <td>234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>79</th>\n",
+       "      <th>2</th>\n",
        "      <td>Wallingford</td>\n",
        "      <td>167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>3</th>\n",
        "      <td>Fremont</td>\n",
        "      <td>158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
+       "      <th>4</th>\n",
        "      <td>Minor</td>\n",
        "      <td>134</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76</th>\n",
+       "      <th>5</th>\n",
        "      <td>University District</td>\n",
        "      <td>122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>74</th>\n",
+       "      <th>6</th>\n",
        "      <td>Stevens</td>\n",
        "      <td>119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>7</th>\n",
        "      <td>First Hill</td>\n",
        "      <td>108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>8</th>\n",
        "      <td>Central Business District</td>\n",
        "      <td>103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
+       "      <th>9</th>\n",
        "      <td>Lower Queen Anne</td>\n",
        "      <td>94</td>\n",
        "    </tr>\n",
@@ -2204,35 +2204,46 @@
        "</div>"
       ],
       "text/plain": [
-       "                Neighbourhood  Count\n",
-       "9                    Broadway    397\n",
-       "4                    Belltown    234\n",
-       "79                Wallingford    167\n",
-       "21                    Fremont    158\n",
-       "47                      Minor    134\n",
-       "76        University District    122\n",
-       "74                    Stevens    119\n",
-       "20                 First Hill    108\n",
-       "12  Central Business District    103\n",
-       "38           Lower Queen Anne     94"
+       "      neighbourhood_cleansed  Count\n",
+       "0                   Broadway    397\n",
+       "1                   Belltown    234\n",
+       "2                Wallingford    167\n",
+       "3                    Fremont    158\n",
+       "4                      Minor    134\n",
+       "5        University District    122\n",
+       "6                    Stevens    119\n",
+       "7                 First Hill    108\n",
+       "8  Central Business District    103\n",
+       "9           Lower Queen Anne     94"
       ]
      },
-     "execution_count": 580,
+     "execution_count": 641,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neighboor_list = list_df.groupby('neighbourhood_cleansed').id.count()\n",
-    "neighboor_list = neighboor_list.reset_index()\n",
-    "neighboor_list.rename(columns={\"neighbourhood_cleansed\":\"Neighbourhood\", \"id\":\"Count\"},inplace=True)\n",
-    "neighboor_top10 = neighboor_list.sort_values(by=\"Count\",ascending=False).head(10)\n",
-    "neighboor_top10"
+    "neighboor_list_query = pd.read_sql(\"select neighbourhood_cleansed, count(*) as 'Count'\\\n",
+    "                                    from listings \\\n",
+    "                                   group by neighbourhood_cleansed \\\n",
+    "                                   order by Count desc \\\n",
+    "                                   limit 10;\", conn)\n",
+    "neighboor_list_query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 644,
+   "id": "1455b6cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neighboor_list_query.rename(columns={\"neighbourhood_cleansed\":\"Neighbourhood\"},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 645,
    "id": "8c5bf65a",
    "metadata": {},
    "outputs": [
@@ -2248,7 +2259,7 @@
     }
    ],
    "source": [
-    "ax = neighboor_top10.plot(x=\"Neighbourhood\", y=\"Count\", kind=\"bar\")"
+    "ax = neighboor_list_query.plot(x=\"Neighbourhood\", y=\"Count\", kind=\"bar\")"
    ]
   },
   {
@@ -2265,6 +2276,120 @@
    "metadata": {},
    "source": [
     "### Top 10 Neighbourhood with Highest Average Price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 648,
+   "id": "f391fab6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neighbourhood_cleansed</th>\n",
+       "      <th>AVG(price)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dunlap</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Roosevelt</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>South Delridge</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wallingford</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Broadway</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Georgetown</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>First Hill</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Fairmount Park</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Maple Leaf</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Green Lake</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  neighbourhood_cleansed  AVG(price)\n",
+       "0                 Dunlap         0.0\n",
+       "1              Roosevelt         0.0\n",
+       "2         South Delridge         0.0\n",
+       "3            Wallingford         0.0\n",
+       "4               Broadway         0.0\n",
+       "5             Georgetown         0.0\n",
+       "6             First Hill         0.0\n",
+       "7         Fairmount Park         0.0\n",
+       "8             Maple Leaf         0.0\n",
+       "9             Green Lake         0.0"
+      ]
+     },
+     "execution_count": 648,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neighboor_price_query = pd.read_sql(\"select neighbourhood_cleansed, AVG(price) \\\n",
+    "                                     from listings \\\n",
+    "                                     group by neighbourhood_cleansed \\\n",
+    "                                     order by AVG(price) desc \\\n",
+    "                                     limit 10; \", conn)\n",
+    "neighboor_price_query"
    ]
   },
   {
@@ -2407,7 +2532,7 @@
    "id": "c9747439",
    "metadata": {},
    "source": [
-    "## Price prediction"
+    "## Preparing `Listings` Dataset for Price"
    ]
   },
   {
@@ -2761,7 +2886,7 @@
   {
    "cell_type": "code",
    "execution_count": 595,
-   "id": "627701ab",
+   "id": "bdaaffe0",
    "metadata": {},
    "outputs": [
     {
@@ -2790,7 +2915,7 @@
   {
    "cell_type": "code",
    "execution_count": 596,
-   "id": "327143a9",
+   "id": "35a6821c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3629,7 +3754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "762cd26b",
+   "id": "fd398a2e",
    "metadata": {},
    "source": [
     "### Encoding categorical variables"
@@ -3638,7 +3763,7 @@
   {
    "cell_type": "code",
    "execution_count": 606,
-   "id": "da6129a8",
+   "id": "81c9305c",
    "metadata": {},
    "outputs": [
     {
@@ -3660,7 +3785,7 @@
   {
    "cell_type": "code",
    "execution_count": 607,
-   "id": "981f1acb",
+   "id": "277b6127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3674,7 +3799,7 @@
   {
    "cell_type": "code",
    "execution_count": 610,
-   "id": "c5992703",
+   "id": "a5593c6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3685,7 +3810,7 @@
   {
    "cell_type": "code",
    "execution_count": 612,
-   "id": "46699535",
+   "id": "a0a4d341",
    "metadata": {},
    "outputs": [
     {
@@ -4108,7 +4233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88e4ad81",
+   "id": "6d2c766c",
    "metadata": {},
    "source": [
     "### Check Multicollinearity"
@@ -4117,7 +4242,7 @@
   {
    "cell_type": "code",
    "execution_count": 634,
-   "id": "8bb778d8",
+   "id": "ff32b690",
    "metadata": {},
    "outputs": [
     {
@@ -8699,7 +8824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5350ce0a",
+   "id": "4457d3f9",
    "metadata": {},
    "source": [
     "We observe high correlation among some of the feature variables from the above correlation plot. Hence we will drop some of the features and then build our model on top of that."
@@ -8708,7 +8833,7 @@
   {
    "cell_type": "code",
    "execution_count": 635,
-   "id": "9c1cc3fc",
+   "id": "1a4396b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8720,7 +8845,7 @@
   {
    "cell_type": "code",
    "execution_count": 636,
-   "id": "55ba4e5e",
+   "id": "9efb12a7",
    "metadata": {},
    "outputs": [
     {
@@ -9130,7 +9255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "311adc8f",
+   "id": "80bf819c",
    "metadata": {},
    "source": [
     "### Save the final file for model creation"
@@ -9139,7 +9264,7 @@
   {
    "cell_type": "code",
    "execution_count": 637,
-   "id": "5a2ae2f1",
+   "id": "88c38ee9",
    "metadata": {},
    "outputs": [],
    "source": [
