ERR diagram added

--- a/Airbnb_Seattle.ipynb
+++ b/Airbnb_Seattle.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 649,
    "id": "e23c355d",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 650,
    "id": "96ca37f2",
    "metadata": {},
    "outputs": [
@@ -131,42 +131,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>241032</td>\n",
-       "      <td>2016-01-04</td>\n",
-       "      <td>t</td>\n",
-       "      <td>$85.00</td>\n",
+       "      <td>1483944</td>\n",
+       "      <td>2016-02-01</td>\n",
+       "      <td>f</td>\n",
+       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>241032</td>\n",
-       "      <td>2016-01-05</td>\n",
+       "      <td>8568567</td>\n",
+       "      <td>2016-11-30</td>\n",
        "      <td>t</td>\n",
-       "      <td>$85.00</td>\n",
+       "      <td>$140.00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>241032</td>\n",
-       "      <td>2016-01-06</td>\n",
-       "      <td>f</td>\n",
-       "      <td>None</td>\n",
+       "      <td>8508341</td>\n",
+       "      <td>2016-10-26</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$150.00</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>241032</td>\n",
-       "      <td>2016-01-07</td>\n",
+       "      <td>1483944</td>\n",
+       "      <td>2016-02-02</td>\n",
        "      <td>f</td>\n",
        "      <td>None</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>241032</td>\n",
-       "      <td>2016-01-08</td>\n",
-       "      <td>f</td>\n",
-       "      <td>None</td>\n",
+       "      <td>8568567</td>\n",
+       "      <td>2016-12-01</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$140.00</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -174,15 +174,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   listing_id        date available    price  calendar_id\n",
-       "0      241032  2016-01-04         t  $85.00             1\n",
-       "1      241032  2016-01-05         t  $85.00             2\n",
-       "2      241032  2016-01-06         f     None            3\n",
-       "3      241032  2016-01-07         f     None            4\n",
-       "4      241032  2016-01-08         f     None            5"
+       "   listing_id        date available     price  calendar_id\n",
+       "0     1483944  2016-02-01         f      None            1\n",
+       "1     8568567  2016-11-30         t  $140.00             2\n",
+       "2     8508341  2016-10-26         t  $150.00             3\n",
+       "3     1483944  2016-02-02         f      None            4\n",
+       "4     8568567  2016-12-01         t  $140.00             5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 650,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,8 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
-   "id": "7a08211f",
+   "execution_count": 651,
+   "id": "86bdd186",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "2873"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 651,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2120,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 641,
-   "id": "592ea1d7",
+   "id": "2af1d931",
    "metadata": {},
    "outputs": [
     {
@@ -2281,7 +2281,7 @@
   {
    "cell_type": "code",
    "execution_count": 648,
-   "id": "f391fab6",
+   "id": "d4b7e2c9",
    "metadata": {},
    "outputs": [
     {
@@ -2532,7 +2532,7 @@
    "id": "c9747439",
    "metadata": {},
    "source": [
-    "## Preparing `Listings` Dataset for Price"
+    "## Preparing `Listings` Dataset for Price Prediction"
    ]
   },
   {
@@ -2886,7 +2886,7 @@
   {
    "cell_type": "code",
    "execution_count": 595,
-   "id": "bdaaffe0",
+   "id": "9239f81f",
    "metadata": {},
    "outputs": [
     {
@@ -2915,7 +2915,7 @@
   {
    "cell_type": "code",
    "execution_count": 596,
-   "id": "35a6821c",
+   "id": "7e062288",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3754,7 +3754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd398a2e",
+   "id": "97550745",
    "metadata": {},
    "source": [
     "### Encoding categorical variables"
@@ -3763,7 +3763,7 @@
   {
    "cell_type": "code",
    "execution_count": 606,
-   "id": "81c9305c",
+   "id": "62a21a85",
    "metadata": {},
    "outputs": [
     {
@@ -3785,7 +3785,7 @@
   {
    "cell_type": "code",
    "execution_count": 607,
-   "id": "277b6127",
+   "id": "39133ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3799,7 +3799,7 @@
   {
    "cell_type": "code",
    "execution_count": 610,
-   "id": "a5593c6f",
+   "id": "f4a99416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3810,7 +3810,7 @@
   {
    "cell_type": "code",
    "execution_count": 612,
-   "id": "a0a4d341",
+   "id": "44ecbce6",
    "metadata": {},
    "outputs": [
     {
@@ -4233,7 +4233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d2c766c",
+   "id": "95b51887",
    "metadata": {},
    "source": [
     "### Check Multicollinearity"
@@ -4242,7 +4242,7 @@
   {
    "cell_type": "code",
    "execution_count": 634,
-   "id": "ff32b690",
+   "id": "ad7a717d",
    "metadata": {},
    "outputs": [
     {
@@ -8824,7 +8824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4457d3f9",
+   "id": "8dcb0ee7",
    "metadata": {},
    "source": [
     "We observe high correlation among some of the feature variables from the above correlation plot. Hence we will drop some of the features and then build our model on top of that."
@@ -8833,7 +8833,7 @@
   {
    "cell_type": "code",
    "execution_count": 635,
-   "id": "1a4396b3",
+   "id": "87b18ef6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8845,7 +8845,7 @@
   {
    "cell_type": "code",
    "execution_count": 636,
-   "id": "9efb12a7",
+   "id": "da3700d1",
    "metadata": {},
    "outputs": [
     {
@@ -9255,7 +9255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80bf819c",
+   "id": "1dcf0080",
    "metadata": {},
    "source": [
     "### Save the final file for model creation"
@@ -9264,7 +9264,7 @@
   {
    "cell_type": "code",
    "execution_count": 637,
-   "id": "88c38ee9",
+   "id": "d09a58c6",
    "metadata": {},
    "outputs": [],
    "source": [
