Fix calendar_id primary key bug

--- a/Data_Importing_Edits_2.ipynb
+++ b/Data_Importing_Edits_2.ipynb
@@ -552,10 +552,12 @@
     "        # pass the create table statement \n",
     "        cursor.execute(\"\"\"\n",
     "        CREATE TABLE calendar( \n",
+    "            calendar_id int NOT NULL AUTO_INCREMENT,\n",
     "            listing_id INT UNSIGNED NOT NULL,\n",
     "            date DATE DEFAULT NULL,\n",
     "            available TEXT DEFAULT NULL, \n",
     "            price TEXT DEFAULT NULL,\n",
+    "            PRIMARY KEY (calendar_id),\n",
     "            FOREIGN KEY (listing_id) \n",
     "                REFERENCES listings (id) \n",
     "                ON DELETE RESTRICT \n",
@@ -568,7 +570,7 @@
     "        nonexistent_listings = []\n",
     "        for i,row in calendar.iterrows():\n",
     "            try:\n",
-    "                sql = \"INSERT INTO Airbnb_DB.calendar VALUES (%s,%s,%s,%s)\" # %S means string interpolation\n",
+    "                sql = \"INSERT INTO Airbnb_DB.calendar(listing_id, date, available, price) VALUES (%s,%s,%s,%s)\" # %S means string interpolation\n",
     "                cursor.execute(sql, tuple(row))\n",
     "                connection.commit() # since connection is not auto committed by default\n",
     "            except Error as e:\n",
@@ -583,42 +585,6 @@
     "# How to call function\n",
     "\n",
     "import_calendar(conn, 'Airbnb_DB')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Add primary key to Calendar Table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calendar primary keys added...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Function to add primary key to calendar\n",
-    "\n",
-    "def add_calendar_primary_key(connection):\n",
-    "    cursor = connection.cursor()\n",
-    "    cursor.execute(\"\"\"\n",
-    "    ALTER TABLE calendar add calendar_id INT primary key auto_increment; \n",
-    "    \"\"\", multi=True)\n",
-    "    connection.commit()\n",
-    "    print(\"Calendar primary keys added...\")\n",
-    "\n",
-    "# Call function\n",
-    "\n",
-    "add_calendar_primary_key(conn)"
    ]
   }
  ],
