--- a/Airbnb_Seattle_data_preprocessing.ipynb
+++ b/Airbnb_Seattle_data_preprocessing.ipynb
@@ -171,6 +171,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8cb32a9",
+   "metadata": {},
+   "source": [
+    "### Check Unique Number of listing ID "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 651,
    "id": "86bdd186",
@@ -196,7 +204,7 @@
    "id": "5343a00d",
    "metadata": {},
    "source": [
-    "### EDA Analysis"
+    "# EDA Analysis"
    ]
   },
   {
@@ -2257,120 +2265,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
-   "id": "d4b7e2c9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>neighbourhood_cleansed</th>\n",
-       "      <th>AVG(price)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Dunlap</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Roosevelt</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>South Delridge</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Wallingford</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Broadway</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Georgetown</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>First Hill</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Fairmount Park</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Maple Leaf</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Green Lake</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  neighbourhood_cleansed  AVG(price)\n",
-       "0                 Dunlap         0.0\n",
-       "1              Roosevelt         0.0\n",
-       "2         South Delridge         0.0\n",
-       "3            Wallingford         0.0\n",
-       "4               Broadway         0.0\n",
-       "5             Georgetown         0.0\n",
-       "6             First Hill         0.0\n",
-       "7         Fairmount Park         0.0\n",
-       "8             Maple Leaf         0.0\n",
-       "9             Green Lake         0.0"
-      ]
-     },
-     "execution_count": 648,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "neighboor_price_query = pd.read_sql(\"select neighbourhood_cleansed, AVG(price) \\\n",
-    "                                     from listings \\\n",
-    "                                     group by neighbourhood_cleansed \\\n",
-    "                                     order by AVG(price) desc \\\n",
-    "                                     limit 10; \", conn)\n",
-    "neighboor_price_query"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 582,
    "id": "da8b2aea",
    "metadata": {},
@@ -2909,20 +2803,6 @@
    "source": [
     "#Drop the null value in property_type column which has one missing value\n",
     "list_new_df = list_new_df.dropna(subset=['property_type','host_neighbourhood','summary','space','host_location'], axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 598,
-   "id": "9ae5753e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for col in list_new_df.select_dtypes(include='object'):\n",
-    "#     #check if column has null values\n",
-    "#     if list_new_df[col].isnull().sum()>0:\n",
-    "#         # Impute mode \n",
-    "#         list_new_df[col].fillna(value=\"N/A\", inplace=True)"
    ]
   },
   {
