--- a/Data_Importing_Edits_2.ipynb
+++ b/Data_Importing_Edits_2.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install mysql-connector-python"
+    "# !pip install mysql-connector-python\n",
+    "# !pip install boto3\n",
+    "# !pip install s3fs\n"
    ]
   },
   {
@@ -17,14 +19,16 @@
    "source": [
     "# Import dependencies\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import pymysql as mysql\n",
-    "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import warnings\n",
     "import getpass\n",
     "import mysql.connector as msql\n",
     "from mysql.connector import Error\n",
+    "\n",
+    "#Python package that provides interfaces to AWS including Amazon S3\n",
+    "import boto3\n",
+    "\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -32,18 +36,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import CSV Files"
+    "Import CSV Files from AWS S3 Bucket"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "calendar=pd.read_csv('Dataset/calendar.csv',index_col = False, delimiter = ',')\n",
-    "reviews=pd.read_csv('Dataset/reviews.csv',index_col = False, delimiter = ',')\n",
-    "listings=pd.read_csv('Dataset/listings.csv',index_col = False, delimiter = ',')"
+    "import boto3\n",
+    "\n",
+    "s3 = boto3.client('s3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3 = boto3.resource(\n",
+    "    service_name='s3',\n",
+    "    region_name='us-east-1',\n",
+    "    aws_access_key_id= getpass.getpass('aws access key:'),\n",
+    "    aws_secret_access_key= getpass.getpass('aws secret access key:')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for obj in s3.Bucket('airbnbseattle').objects.all():\n",
+    "    print(obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get calendar dataset from airbnbseattle bucket\n",
+    "cal_object = s3.Bucket('airbnbseattle').Object('calendar.csv').get()\n",
+    "calendar = pd.read_csv(cal_object[\"Body\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get reviews dataset from airbnbseattle bucket\n",
+    "rev_object = s3.Bucket('airbnbseattle').Object('reviews.csv').get()\n",
+    "reviews = pd.read_csv(rev_object[\"Body\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get listings dataset from airbnbseattle bucket\n",
+    "list_object = s3.Bucket('airbnbseattle').Object('listings.csv').get()\n",
+    "listings = pd.read_csv(list_object[\"Body\"])"
    ]
   },
   {
