--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,12 +71,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clean Calendar and Export"
+    "Clean Calendar and Export\n",
+    "\n",
+    "ETA: 3 sec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,12 +97,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clean Reviews and Export"
+    "Clean Reviews and Export\n",
+    "\n",
+    "ETA: 30 sec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,12 +129,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clean Listings and Export"
+    "Clean Listings and Export\n",
+    "\n",
+    "ETA: 5 sec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
