--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -2,16 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting textblob\n",
+      "  Using cached textblob-0.17.1-py2.py3-none-any.whl (636 kB)\n",
+      "Requirement already satisfied: nltk>=3.1 in /opt/anaconda3/envs/myenv/lib/python3.9/site-packages (from textblob) (3.7)\n",
+      "Requirement already satisfied: tqdm in /opt/anaconda3/envs/myenv/lib/python3.9/site-packages (from nltk>=3.1->textblob) (4.64.1)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /opt/anaconda3/envs/myenv/lib/python3.9/site-packages (from nltk>=3.1->textblob) (2022.7.9)\n",
+      "Requirement already satisfied: click in /opt/anaconda3/envs/myenv/lib/python3.9/site-packages (from nltk>=3.1->textblob) (8.0.4)\n",
+      "Requirement already satisfied: joblib in /opt/anaconda3/envs/myenv/lib/python3.9/site-packages (from nltk>=3.1->textblob) (1.1.1)\n",
+      "Installing collected packages: textblob\n",
+      "Successfully installed textblob-0.17.1\n"
+     ]
+    }
+   ],
    "source": [
-    "#!pip install mysql-connector-python"
+    "#!pip install mysql-connector-python\n",
+    "!pip install textblob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +36,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pymysql as mysql\n",
-    "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import warnings\n",
     "import getpass\n",
@@ -28,12 +44,16 @@
     "\n",
     "import mysql.connector as msql\n",
     "from mysql.connector import Error\n",
+    "\n",
+    "#Python package that provides interfaces to AWS including Amazon S3\n",
+    "import boto3\n",
+    "\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +91,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Extract the Data from S3 Bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new S3 client object that can be used to access and manage objects stored in Amazon S3 buckets\n",
+    "s3 = boto3.resource('s3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aws access key:········\n",
+      "aws secret access key:········\n"
+     ]
+    }
+   ],
+   "source": [
+    "s3 = boto3.resource(\n",
+    "    service_name='s3',\n",
+    "    region_name='us-east-1',\n",
+    "    aws_access_key_id= getpass.getpass('aws access key:'),\n",
+    "    aws_secret_access_key= getpass.getpass('aws secret access key:')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s3.ObjectSummary(bucket_name='airbnbseattle', key='calendar.csv')\n",
+      "s3.ObjectSummary(bucket_name='airbnbseattle', key='listings.csv')\n",
+      "s3.ObjectSummary(bucket_name='airbnbseattle', key='reviews.csv')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for obj in s3.Bucket('airbnbseattle').objects.all():\n",
+    "    print(obj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Clean Calendar and Export\n",
     "\n",
     "ETA: 3 sec"
@@ -78,19 +158,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "calendar=pd.read_csv('Dataset/calendar.csv',index_col = False, delimiter = ',')\n",
+    "# Get calendar dataset from airbnbseattle bucket\n",
+    "cal_object = s3.Bucket('airbnbseattle').Object('calendar.csv').get()\n",
+    "calendar = pd.read_csv(cal_object[\"Body\"])\n",
     "\n",
     "# step 1: remove dollar sign and convert to float\n",
-    "\n",
     "calendar['price'] = calendar['price'].str.replace('$', '').str.replace(',','').astype(float)\n",
     "\n",
     "# step 2: export csv\n",
+    "data = calendar.to_csv('./Clean/calendar.csv')\n",
     "\n",
-    "calendar.to_csv('./Clean/calendar.csv', encoding='utf-8', index=False)\n"
+    "# step 3: Upload calendar.csv into the S3 bucket\n",
+    "bucket = s3.Bucket('airbnbseattleclean')\n",
+    "bucket.upload_file('./Clean/calendar.csv', 'calendar.csv')"
    ]
   },
   {
@@ -104,11 +188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reviews=pd.read_csv('Dataset/reviews.csv',index_col = False, delimiter = ',')\n",
+    "# Get reviews dataset from airbnbseattle bucket\n",
+    "rev_object = s3.Bucket('airbnbseattle').Object('reviews.csv').get()\n",
+    "reviews = pd.read_csv(rev_object[\"Body\"])\n",
     "reviews = reviews.replace(np.nan, None)\n",
     "\n",
     "# step 1: replace None values with empty string\n",
@@ -121,8 +207,11 @@
     "reviews[\"sentiment_label\"] = reviews[\"sentiment\"].apply(get_sentiment_label)\n",
     "\n",
     "# step 3: export csv\n",
+    "reviews.to_csv('./Clean/reviews.csv', encoding='utf-8', index=False)\n",
     "\n",
-    "reviews.to_csv('./Clean/reviews.csv', encoding='utf-8', index=False)\n"
+    "# step 3: Upload reviews.csv into the S3 bucket\n",
+    "bucket = s3.Bucket('airbnbseattleclean')\n",
+    "bucket.upload_file('./Clean/reviews.csv', 'reviews.csv')\n"
    ]
   },
   {
@@ -136,11 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "listings=pd.read_csv('Dataset/listings.csv',index_col = False, delimiter = ',')\n",
+    "# Get listings dataset from airbnbseattle bucket\n",
+    "list_object = s3.Bucket('airbnbseattle').Object('listings.csv').get()\n",
+    "listings = pd.read_csv(list_object[\"Body\"])\n",
     "listings = listings.replace(np.nan, None)\n",
     "\n",
     "# step 1: remove dollar sign and convert to float for \n",
@@ -189,13 +280,24 @@
     "\n",
     "# step 6: export csv\n",
     "\n",
-    "listings.to_csv('./Clean/listings.csv', encoding='utf-8', index=False)"
+    "listings.to_csv('./Clean/listings.csv', encoding='utf-8', index=False)\n",
+    "\n",
+    "# step 7: Upload listings.csv into the S3 bucket\n",
+    "bucket = s3.Bucket('airbnbseattleclean')\n",
+    "bucket.upload_file('./Clean/listings.csv', 'listings.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('ADS500B')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -209,9 +311,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "b67baf7d77b2e4322c694a7cdbefbe104fc7a417c712774226af2226d547f1c9"
